--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@apollo/client": "^3.5.6",
     "@apollo/react-hooks": "^4.0.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.6.1",
+    "@mui/material": "^5.6.1",
     "graphql": "^16.2.0",
     "next": "12.0.7",
     "react": "17.0.2",
