--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.5.6",
     "@apollo/react-hooks": "^4.0.0",
     "@material-ui/core": "^4.12.4",
+    "dotenv": "^16.0.1",
     "graphql": "^16.2.0",
     "next": "12.0.7",
     "react": "17.0.2",
